# Call_Me_Maybe

./: .gitignore  Makefile  README.md  architecture_map.md  pipeline_optimisations_report.md  pyproject.toml  test.py
data/input/: function_calling_tests.json  functions_definition.json
data/output/: function_calling_results.json
src/: JsonParser.py  __main__.py  decoder.py  jsonparser.py  models.py  parser.py  pipeline.py  prompt_builder.py  vocabulary.py
