[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Function calling tool using constrained decoding with small LLMs"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pydantic>=2.0",
    "numpy>=1.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "flake8>=6.0",
    "mypy>=1.0",
]

[tool.mypy]
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.hatch.build.targets.wheel]
packages = ["src"]